# spaceapps2017

./: .gitignore  NOTES.md  README.md
classifier/: README.md  main.py  server.py  setup.cfg
frontend/: gulpfile.js  package.json
frontend/src/: app.js  index.html  main.scss
frontend/src/constants/: events.const.js
frontend/src/controllers/: main.ctrl.js
frontend/src/directives/loader/: loader.dir.js  loader.html  loader.scss
frontend/src/directives/modal/: modal.dir.js  modal.html  modal.scss  modal2.html
frontend/src/services/: notifications.svc.js  rest-api.svc.js
frontend/src/styles/: _variables.scss
frontend/src/views/edit/: edit.ctrl.js  edit.scss  edit.tpl.html
restful-server/: index.js  package.json
restful-server/express-app/: app.js  middleware.js  routes.js
restful-server/mongoose/: acronym.js  connector.js  definition.js  update.js  user.js
scripts/: def-test.json  script1.json  scriptDefinitions.json
source code for telegram bot and script generator/: SPACEAPPS_FOR_THE_WIN.sln
source code for telegram bot and script generator/SPACEAPPS_FOR_THE_WIN/: Program.cs  SPACEAPPS_FOR_THE_WIN.csproj
source code for telegram bot and script generator/SPACEAPPS_FOR_THE_WIN/Properties/: AssemblyInfo.cs
source code for telegram bot and script generator/TelegramBot/: Acronym.cs  Program.cs  TelegramBot.csproj  packages.config
source code for telegram bot and script generator/TelegramBot/Properties/: AssemblyInfo.cs
telegram bot/: TelegramBot.application
telegram bot/Application Files/TelegramBot_1_0_0_0/: TelegramBot.exe.deploy
(+5 files in other folders)
