[metadata]
name = earthtionary-classifier
author = Adrian Moreno
author-email = adrn.moreno@gmail.com
summary = Classifier for EarthTionary
license = MIT
description-file =
    README.md
home-page = http://github.com/adriem/spaceapps2017
requires-python = >=3.6
classifier = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
 
[files]
packages =
    main
